--- a/mvp/package.json
+++ b/mvp/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "start": "nodemon server/index.js",
     "build": "webpack -d --watch"
-
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
